# foundation

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/workflows/: workflow.yml
foundation/: registry.py
foundation/common/: config.py  download.py  file_handler.py  file_io.py  log.py  logger.py  path.py  timer.py
foundation/engine/: __init__.py  hook.py  runner.py
foundation/nn/: __init__.py  giou_loss.py  smooth_l1_loss.py  weight_init.py
foundation/transforms/: __init__.py  transform.py  transform_util.py
foundation/visualization/: __init__.py  colormap.py  visualizer.py
tests/: test_common.py  test_download.py  test_file_io.py  test_giou_loss.py  test_path.py  test_registry.py  test_smooth_l1_loss.py  test_transform.py  test_visualizer.py
