[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "foundation"

[project]
name = "Foundation"
version = "0.0.1"
description = "Foundation"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "coloredlogs~=15.0.1",
    "tabulate~=0.9.0",
]

[project.optional-dependencies]
dev = [
    "coverage~=7.2.7",
    "genbadge[coverage,tests]~=1.1.0",
    "lxml~=4.9.2",
    "pytest~=7.4.2",
    "pytest-cov~=4.1.0",
    "pytest-xdist~=3.3.1",
    "pytest-asyncio",
    "mypy~=1.4.0",  # stactic type checker
    "docformatter[tomli]~=1.7.5",
    "pre-commit~=3.2.2",
    "ruff~=0.4.2",
    "mdformat-ruff~=0.1.3",
    "ipdb",
]

[project.scripts]
quest = "sage_search_eval.qu.main:main"


[tool.docformatter]
black = true
recursive = true
close-quotes-on-newline = true
wrap-summaries = 100
wrap-descriptions = 100


[tool.mypy]
python_version = "3.10"
namespace_packages = true
# The settings below are equivalent to `strict = true`
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


[tool.coverage.html]
directory = ".out/htmlcov"

[tool.coverage.run]
source = ["sage_search_eval"]
omit = [
    ".tox/*",
]
branch = true
parallel = true
concurrency = ["multiprocessing"]


[tool.pytest.ini_options]
# code coverage to be increased progresively to 75%
addopts = "--cov-fail-under=10 --cov-report html --cov-report term --cov-report xml:.out/coverage.xml"
